Fix T48173: event.mouse_prev_x/y unreliable.